fix long nav items on mobile

--- a/assets/src/css/masthead/_menu.scss
+++ b/assets/src/css/masthead/_menu.scss
@@ -74,6 +74,7 @@
 
 			li, a {
 				display: block;
+				white-space: normal;
 			}
 		}
 
